Web config,alert fix

--- a/web.config
+++ b/web.config
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <system.webServer>
+<staticContent>
+      <mimeMap fileExtension=".unity3d" mimeType="application/vnd.unity" />
+    </staticContent>
         <rewrite>
             <rules>
                 <rule name="Rule" stopProcessing="true">
@@ -13,6 +16,7 @@
                         <action type="Rewrite" url="index.php/{R:1}" appendQueryString="true" />
                 </rule>
             </rules>
+
         </rewrite>
     </system.webServer>
 </configuration>
